<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton
            android:id="@+id/calcButtonClear"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:src="@drawable/ic_action_calc_clean" />

    <ImageButton
            android:id="@+id/calcButtonBack"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_calc_back" />

    <ImageButton
            android:id="@+id/calcButtonPrev"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_calc_prev" />

    <ImageButton
            android:id="@+id/calcButtonNext"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_calc_next" />

    <Button
            android:id="@+id/calcButton1"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_1_text" />

    <Button
            android:id="@+id/calcButton2"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_2_text" />

    <Button
            android:id="@+id/calcButton3"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_3_text" />

    <Button
            android:id="@+id/calcButtonPlus"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/plus_text" />

    <Button
            android:id="@+id/calcButton4"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_4_text" />

    <Button
            android:id="@+id/calcButton5"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_5_text" />

    <Button
            android:id="@+id/calcButton6"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_6_text" />
    <Button
            android:id="@+id/calcButtonMinus"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/minus_text"/>

    <Button
            android:id="@+id/calcButton7"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_7_text" />

    <Button
            android:id="@+id/calcButton8"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_8_text" />

    <Button
            android:id="@+id/calcButton9"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_9_text" />

    <Button
            android:id="@+id/calcButtonMultiplication"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/multiplication_text" />

    <Button
            android:id="@+id/calcButtonDot"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/dot_text" />

    <Button
            android:id="@+id/calcButton0"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/number_0_text" />

    <Button
            android:id="@+id/calcButtonBracket"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/bracket_text"/>

    <Button
            android:id="@+id/calcButtonDivision"
            android:onClick="onKeyBoardButtonClick"
            style="@style/CalcButtonControls"
            android:text="@string/division_text" />
</merge>